
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int RTF_Info ;


 scalar_t__ RTFGetToken (int *) ;
 int RTFRouteToken (int *) ;
 scalar_t__ rtfEOF ;

void RTFRead(RTF_Info *info)
{
 while (RTFGetToken (info) != rtfEOF)
  RTFRouteToken (info);
}
